--- a/anisaportifolio.html
+++ b/anisaportifolio.html
@@ -3,10 +3,10 @@
 <head>
 <title>Page Title</title>
 </head>
-<body>
-  <style="background-color:cyan">
-  
 
+ 
+  
+<body style="background-color:cyan;">
 <h1>Anisa De La Garza</h1>
 <p>My name is Anisa. I go to Lehman High School and I am in the 12th grade. I have lived in Kyle Texas my whole life and I love Austin. I like to sing and i like who are nice and caring, I dislike people who are selfish and mean. My favorite color is blue. The current resturants I love are Panda Express, Raising Canes, and Torcy's Tacos. I love to collect jewery and try new things. Halloween is my favorite hoilday and Post Malone is favorite artist in the entire world.</p>
 
